--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React Dashboard is an entirely free open-source isomorphic dashboard template built with the latest technologies such as React Router, Redux, GraphQL and Material UI."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/dashboard.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
